Implement new Projects form
No saving yet
