# app/backend/src/schemas/__init__.py
@@ -1,9 +1,15 @@
 from .project import ProjectConfig
-from .camera import CameraConfig
-from .robot import RobotConfig
+from .camera import CameraConfig, Camera, CameraProfile
+from .robot import RobotConfig, RobotPortInfo
+from .calibration import CalibrationConfig
 
 __all__ = [
     CameraConfig,
     ProjectConfig,
     RobotConfig,
+    RobotPortInfo,
+    Camera,
+    CameraProfile,
+    CalibrationConfig,
 ]
+
