# app/ui/src/api/openapi-spec.json
@@ -22,10 +22,128 @@
                     }
                 }
             }
+        },
+        "/api/hardware/cameras": {
+            "get": {
+                "summary": "Get Cameras",
+                "description": "Get all cameras",
+                "operationId": "get_cameras_api_hardware_cameras_get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "items": { "$ref": "#/components/schemas/Camera" },
+                                    "type": "array",
+                                    "title": "Response Get Cameras Api Hardware Cameras Get"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/hardware/robots": {
+            "get": {
+                "summary": "Get Robots",
+                "description": "Get all connected Robots",
+                "operationId": "get_robots_api_hardware_robots_get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "items": { "$ref": "#/components/schemas/RobotPortInfo" },
+                                    "type": "array",
+                                    "title": "Response Get Robots Api Hardware Robots Get"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/hardware/calibrations": {
+            "get": {
+                "summary": "Get Lerobot Calibrations",
+                "description": "Get calibrations known to huggingface leRobot",
+                "operationId": "get_lerobot_calibrations_api_hardware_calibrations_get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "items": { "$ref": "#/components/schemas/CalibrationConfig" },
+                                    "type": "array",
+                                    "title": "Response Get Lerobot Calibrations Api Hardware Calibrations Get"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/hardware/identify": {
+            "put": {
+                "summary": "Identify Robot",
+                "operationId": "identify_robot_api_hardware_identify_put",
+                "parameters": [
+                    {
+                        "name": "joint",
+                        "in": "query",
+                        "required": false,
+                        "schema": { "anyOf": [{ "type": "string" }, { "type": "null" }], "title": "Joint" }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": { "application/json": { "schema": { "$ref": "#/components/schemas/RobotPortInfo" } } }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": { "application/json": { "schema": {} } }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/schemas/HTTPValidationError" } }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
         "schemas": {
+            "CalibrationConfig": {
+                "properties": {
+                    "id": { "type": "string", "title": "Id" },
+                    "path": { "type": "string", "title": "Path" },
+                    "robot_type": { "type": "string", "enum": ["teleoperator", "robot"], "title": "Robot Type" }
+                },
+                "type": "object",
+                "required": ["id", "path", "robot_type"],
+                "title": "CalibrationConfig"
+            },
+            "Camera": {
+                "properties": {
+                    "name": { "type": "string", "title": "Name", "description": "Camera name" },
+                    "id": {
+                        "type": "string",
+                        "title": "Id",
+                        "description": "Either serial id for  RealSense or port for OpenCV"
+                    },
+                    "type": { "type": "string", "title": "Type" },
+                    "default_stream_profile": { "$ref": "#/components/schemas/CameraProfile" }
+                },
+                "type": "object",
+                "required": ["name", "id", "type", "default_stream_profile"],
+                "title": "Camera"
+            },
             "CameraConfig": {
                 "properties": {
                     "id": {
@@ -54,8 +172,29 @@
                     }
                 },
                 "type": "object",
-                "required": ["type"],
+                "required": ["id", "name", "type"],
                 "title": "CameraConfig"
+            },
+            "CameraProfile": {
+                "properties": {
+                    "width": { "type": "integer", "title": "Width" },
+                    "height": { "type": "integer", "title": "Height" },
+                    "fps": { "type": "integer", "title": "Fps" }
+                },
+                "type": "object",
+                "required": ["width", "height", "fps"],
+                "title": "CameraProfile"
+            },
+            "HTTPValidationError": {
+                "properties": {
+                    "detail": {
+                        "items": { "$ref": "#/components/schemas/ValidationError" },
+                        "type": "array",
+                        "title": "Detail"
+                    }
+                },
+                "type": "object",
+                "title": "HTTPValidationError"
             },
             "ProjectConfig": {
                 "properties": {
@@ -104,6 +243,30 @@
                 "type": "object",
                 "required": ["type"],
                 "title": "RobotConfig"
+            },
+            "RobotPortInfo": {
+                "properties": {
+                    "port": { "type": "string", "title": "Port" },
+                    "serial_id": { "type": "string", "title": "Serial Id" },
+                    "device_name": { "type": "string", "title": "Device Name" }
+                },
+                "type": "object",
+                "required": ["port", "serial_id", "device_name"],
+                "title": "RobotPortInfo"
+            },
+            "ValidationError": {
+                "properties": {
+                    "loc": {
+                        "items": { "anyOf": [{ "type": "string" }, { "type": "integer" }] },
+                        "type": "array",
+                        "title": "Location"
+                    },
+                    "msg": { "type": "string", "title": "Message" },
+                    "type": { "type": "string", "title": "Error Type" }
+                },
+                "type": "object",
+                "required": ["loc", "msg", "type"],
+                "title": "ValidationError"
             }
         }
     }
